[gd_scene load_steps=8 format=3 uid="uid://d2uqck7cxpsdg"]

[ext_resource type="Script" uid="uid://b0n72obp02sga" path="res://ui/menus/main_menu/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bho8kgh8srkqn" path="res://assets/ui/background/bg_city_ruins.png" id="2"]
[ext_resource type="Theme" uid="uid://dje76bqyupdlr" path="res://ui/theme/aftershock_menu_theme.tres" id="3"]

[sub_resource type="Gradient" id="Gradient_volumetric"]
offsets = PackedFloat32Array(0, 0.25, 0.6, 1)
colors = PackedColorArray(0, 0.85, 1, 0.18, 0, 0.85, 1, 0.12, 0, 0.85, 1, 0.04, 0, 0.85, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_volumetric"]
gradient = SubResource("Gradient_volumetric")
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ash"]
lifetime_randomness = 0.6
emission_shape = 3
emission_box_extents = Vector3(700, 10, 1)
direction = Vector3(0, 1, 0)
spread = 12.0
initial_velocity_min = 18.0
initial_velocity_max = 45.0
angular_velocity_min = -20.0
angular_velocity_max = 20.0
gravity = Vector3(-4, 28, 0)
damping_min = 3.0
damping_max = 7.0
scale_min = 0.5
scale_max = 1.8
color = Color(0.75, 0.75, 0.78, 0.7)
turbulence_enabled = true
turbulence_noise_strength = 1.3
turbulence_noise_scale = 3.8

[sub_resource type="Gradient" id="Gradient_vignette"]
offsets = PackedFloat32Array(0, 0.65, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.3, 0, 0, 0, 0.8)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vignette"]
gradient = SubResource("Gradient_vignette")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_city_overlay"]
offsets = PackedFloat32Array(0, 0.45, 0.75, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.7, 0, 0, 0, 0.2, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_city_overlay"]
gradient = SubResource("Gradient_city_overlay")
fill = 0
size = Vector2(1280, 720)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
mouse_filter = 2

[node name="BaseColor" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.04, 0.05, 1)

[node name="CitySilhouette" type="TextureRect" parent="Background"]
modulate = Color(0.25, 0.25, 0.3, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="CityOverlay" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_city_overlay")
expand_mode = 1

[node name="VolumetricLight" type="TextureRect" parent="Background"]
modulate = Color(1, 1, 1, 0.22)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_volumetric")
expand_mode = 1

[node name="AshParticles" type="GPUParticles2D" parent="Background"]
position = Vector2(640, 0)
amount = 140
lifetime = 13.0
preprocess = 6.0
visibility_rect = Rect2(-700, 0, 1400, 900)
process_material = SubResource("ParticleProcessMaterial_ash")

[node name="MainControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
theme = ExtResource("3")

[node name="Vignette" type="TextureRect" parent="MainControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_vignette")

[node name="VBoxContainer" type="VBoxContainer" parent="MainControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -280.0
offset_right = 780.0
offset_bottom = 280.0
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="MainControl/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.1, 0, 0, 0.9)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 105
text = "AFTERSHOCK"

[node name="SubTitle" type="Label" parent="MainControl/VBoxContainer"]
modulate = Color(1, 1, 1, 0.55)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
text = "> INICIALIZANDO PROTOCOLO DE SUPERVIVENCIA..."

[node name="Spacer" type="Control" parent="MainControl/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="MainControl/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="MainControl/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(700, 80)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonPrimary"
text = "â–¸ DESPLEGAR EN DISTRITO 0"

[node name="SpacerButtons" type="Control" parent="MainControl/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 8)

[node name="CharactersButton" type="Button" parent="MainControl/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonSecondary"
text = "SELECCION DE PERSONAJE [1/5]"

[node name="WorkshopButton" type="Button" parent="MainControl/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonSecondary"
text = "TALLER DE MEJORAS"

[node name="CollectionButton" type="Button" parent="MainControl/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonSecondary"
text = "COLECCION [0/23]"

[node name="SettingsButton" type="Button" parent="MainControl/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonSecondary"
text = "CONFIGURACION"

[node name="QuitButton" type="Button" parent="MainControl/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"ButtonSecondary"
text = "ABANDONAR PROTOCOLO"

[node name="HUD_Decorativo" type="Control" parent="MainControl"]
visible = true
modulate = Color(1, 1, 1, 0.7)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StatsInfo" type="Label" parent="MainControl/HUD_Decorativo"]
layout_mode = 1
offset_left = 14.0
offset_top = 14.0
offset_right = 380.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.7)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "KILLS: 0 | OLEADA_MAX: 0 | W/L: 0.0%"

[node name="DateInfo" type="Label" parent="MainControl/HUD_Decorativo"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 14.0
offset_right = -14.0
offset_bottom = 34.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.7)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "ULTIMO DESPLIEGUE: 2026.01.30 | 00:00"
horizontal_alignment = 2

[node name="FragmentsInfo" type="Label" parent="MainControl/HUD_Decorativo"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -34.0
offset_right = 260.0
offset_bottom = -14.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.851, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.9)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 15
text = "ðŸ’Ž FRAGMENTOS: 0"

[node name="VersionInfo" type="Label" parent="MainControl/HUD_Decorativo"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -340.0
offset_top = -34.0
offset_right = -14.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 10
text = "v1.0.0-ALPHA | BUILD 2026.01.30"
horizontal_alignment = 2